# Silicon-Oracle

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .slugignore  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DATABASE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DISCLAIMER.md  DOCS.md  Dockerfile  MONITORING.md  NEXT_STEPS.md  Procfile  QUICKSTART.md  QUICK_REFERENCE.txt  README.md  SECURITY.md  app.py  app.py.backup  backtest.py  check_db.py  check_orders.py  conftest.py  debug_db_connection.py  deploy_to_render.sh  init_db.py  mark1.py  market_aware.py  ml_trader.py  news_sentiment.py  package-lock.json  package.json  portfolio.py  pyproject.toml  render.yaml  requirements-dev.txt  (+9 more)
.github/: CODEOWNERS
.github/workflows/: build-docker.yml  release.yml  tests.yml
docs/: API.md  ARCHITECTURE.md
flask_app/: __init__.py  config.py  extensions.py  scheduler.py
flask_app/agent/: __init__.py  execution_registry.py  permissions.py  routes.py  runtime.py  session_store.py
flask_app/models/: __init__.py
flask_app/routes/: __init__.py  api.py  auth.py  main.py  sentinel.py  sentinel_ui.py
flask_app/services/: __init__.py  agentic_intel_service.py  alert_engine.py  email_service.py  enhanced_oracle_service.py  gemini_service.py  global_intel_service.py  macro_intel_service.py  market_data.py  market_intelligence_service.py  news_intelligence_service.py  news_monitor.py  notifications_service.py  oracle_service.py  portfolio_service.py  scanner_service.py  sentinel_engine.py  stock_service.py  trading_service.py
flask_app/static/: manifest.json
flask_app/static/css/: input.css  tailwind.css
flask_app/templates/components/: backtesting_engine.html  badge.html  button.html  card.html  correlation_matrix.html  dashboard_mode_selector.html  earnings_calendar.html  empty.html  error.html  input.html  insider_tracker.html  macro_dashboard.html  multi_timeframe.html  portfolio_rebalancer.html  risk_calculator.html  sector_heatmap.html  sector_rotation.html  skeleton.html  volatility_surface.html
flask_app/templates/layouts/: auth_base.html  base.html
flask_app/templates/pages/: ai_guidance.html  analysis.html  command_center.html  demo.html  login.html  macro.html  portfolio.html  scanner.html  settings.html  setup_api_keys.html  signup.html  simulation.html  trade.html  watchlist.html
pages/: settings.py
tests/: test_alert_engine.py  test_api_routes.py  test_auth_routes.py  test_basic.py  test_encryption.py  test_main_routes.py  test_permissions.py  test_portfolio.py  test_scanner.py  test_services.py  test_stock_service.py  test_trading_service.py
utils/: __init__.py  ai_scanner.py  alpaca.py  auth.py  data.py  database.py  encryption.py  gemini.py  godmode_data.py  godmode_ui.py  hybrid_data.py  logging_config.py  market_movers.py  notifications.py  optimal_hybrid.py  portfolio_history.py  quant.py  ticker_utils.py  treasury.py
